crates/au-cli/tests/it/snapshots/it__scenarios__location-mixin-two-strict.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "location-strict-violation",
      "message": "file does not satisfy the strict location of 'manifest' (expected path `manifests/`)",
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/location-mixin-two-strict/config/both.md",
        "line_col": {
          "end": {
            "col": 1,
            "line": 1
          },
          "start": {
            "col": 1,
            "line": 1
          }
        },
        "range": {
          "end": 0,
          "start": 0
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 31,
                        "line_col": {
                          "end": {
                            "col": 32,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/location-mixin-two-strict/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "location-mixin-two-strict"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "location-mixin-two-strict"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/location-mixin-two-strict/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "content": "config/",
            "kind": "inline_code",
            "span": {
              "end": 80,
              "line_col": {
                "end": {
                  "col": 38,
                  "line": 7
                },
                "start": {
                  "col": 29,
                  "line": 7
                }
              },
              "start": 71
            }
          },
          {
            "content": "manifests/",
            "kind": "inline_code",
            "span": {
              "end": 97,
              "line_col": {
                "end": {
                  "col": 55,
                  "line": 7
                },
                "start": {
                  "col": 43,
                  "line": 7
                }
              },
              "start": 85
            }
          }
        ],
        "claim": [
          "governance",
          "manifest"
        ],
        "closure": [
          "governance",
          "manifest"
        ],
        "effective_shape": [],
        "effective_values": [],
        "file": "<root>/scenarios/location-mixin-two-strict/config/both.md",
        "section_presence": null
      }
    ]
  }
}
