crates/au-cli/tests/it/snapshots/it__scenarios__malformed-attribution-marker.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "malformed-attribution-marker",
      "message": "inline code `[: ]` starts with `[:` but does not match the `[:fieldName] value` form",
      "severity": "warning",
      "span": {
        "file": "<root>/scenarios/malformed-attribution-marker/decision.md",
        "line_col": {
          "end": {
            "col": 55,
            "line": 6
          },
          "start": {
            "col": 49,
            "line": 6
          }
        },
        "range": {
          "end": 118,
          "start": 112
        }
      }
    },
    {
      "code": "malformed-attribution-marker",
      "message": "inline code `[:]` starts with `[:` but does not match the `[:fieldName] value` form",
      "severity": "warning",
      "span": {
        "file": "<root>/scenarios/malformed-attribution-marker/decision.md",
        "line_col": {
          "end": {
            "col": 23,
            "line": 8
          },
          "start": {
            "col": 18,
            "line": 8
          }
        },
        "range": {
          "end": 143,
          "start": 138
        }
      }
    },
    {
      "code": "malformed-attribution-marker",
      "message": "inline code `[: decided_at] 2026-04-15` starts with `[:` but does not match the `[:fieldName] value` form",
      "severity": "warning",
      "span": {
        "file": "<root>/scenarios/malformed-attribution-marker/decision.md",
        "line_col": {
          "end": {
            "col": 70,
            "line": 10
          },
          "start": {
            "col": 43,
            "line": 10
          }
        },
        "range": {
          "end": 215,
          "start": 188
        }
      }
    },
    {
      "code": "malformed-attribution-marker",
      "message": "inline code `[:decided_at]` starts with `[:` but does not match the `[:fieldName] value` form",
      "severity": "warning",
      "span": {
        "file": "<root>/scenarios/malformed-attribution-marker/decision.md",
        "line_col": {
          "end": {
            "col": 50,
            "line": 12
          },
          "start": {
            "col": 35,
            "line": 12
          }
        },
        "range": {
          "end": 267,
          "start": 252
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 34,
                        "line_col": {
                          "end": {
                            "col": 35,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/malformed-attribution-marker/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "malformed-attribution-marker"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "malformed-attribution-marker"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/malformed-attribution-marker/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "content": "[: ]",
            "kind": "inline_code",
            "span": {
              "end": 118,
              "line_col": {
                "end": {
                  "col": 55,
                  "line": 6
                },
                "start": {
                  "col": 49,
                  "line": 6
                }
              },
              "start": 112
            }
          },
          {
            "content": "[:]",
            "kind": "inline_code",
            "span": {
              "end": 143,
              "line_col": {
                "end": {
                  "col": 23,
                  "line": 8
                },
                "start": {
                  "col": 18,
                  "line": 8
                }
              },
              "start": 138
            }
          },
          {
            "content": "[: decided_at] 2026-04-15",
            "kind": "inline_code",
            "span": {
              "end": 215,
              "line_col": {
                "end": {
                  "col": 70,
                  "line": 10
                },
                "start": {
                  "col": 43,
                  "line": 10
                }
              },
              "start": 188
            }
          },
          {
            "content": "[:decided_at]",
            "kind": "inline_code",
            "span": {
              "end": 267,
              "line_col": {
                "end": {
                  "col": 50,
                  "line": 12
                },
                "start": {
                  "col": 35,
                  "line": 12
                }
              },
              "start": 252
            }
          }
        ],
        "claim": [
          "decision"
        ],
        "closure": [
          "decision"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "decided_at",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/malformed-attribution-marker/type/decision.type.yaml",
                "required": false,
                "shape": "Date"
              }
            ],
            "required": false,
            "shape": "Date"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/malformed-attribution-marker/type/decision.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 58,
                        "line_col": {
                          "end": {
                            "col": 40,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 32
                      },
                      "file": "<root>/scenarios/malformed-attribution-marker/decision.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Migrate dev DB to SQLite"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Migrate dev DB to SQLite"
                }
              }
            ],
            "field": "description"
          }
        ],
        "file": "<root>/scenarios/malformed-attribution-marker/decision.md",
        "section_presence": null
      }
    ]
  }
}
