crates/au-cli/tests/it/snapshots/it__scenarios__marked-fence-clean.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 24,
                        "line_col": {
                          "end": {
                            "col": 25,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/marked-fence-clean/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "marked-fence-clean"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "marked-fence-clean"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/marked-fence-clean/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 91,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 8
                },
                "start": {
                  "col": 1,
                  "line": 7
                }
              },
              "start": 77
            },
            "text": "Assumptions"
          },
          {
            "body": "type: assumption\ndescription: \"Page numbering is monotonic across versions\"\nconfidence: high\n",
            "info": "yaml [:assumptions]",
            "kind": "fenced_block",
            "span": {
              "end": 212,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 14
                },
                "start": {
                  "col": 1,
                  "line": 9
                }
              },
              "start": 92
            }
          }
        ],
        "claim": [
          "decision"
        ],
        "closure": [
          "decision"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "assumptions",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/marked-fence-clean/type/decision.type.yaml",
                "required": false,
                "shape": "assumption&[]"
              }
            ],
            "required": false,
            "shape": "assumption&[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/marked-fence-clean/type/decision.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 212,
                        "line_col": {
                          "end": {
                            "col": 1,
                            "line": 14
                          },
                          "start": {
                            "col": 1,
                            "line": 9
                          }
                        },
                        "start": 92
                      },
                      "file": "<root>/scenarios/marked-fence-clean/decision.md"
                    },
                    "section_path": [
                      {
                        "index": 1,
                        "text": "Assumptions"
                      }
                    ],
                    "surface": "body_fence",
                    "value": {
                      "fields": [
                        {
                          "field": "confidence",
                          "values": [
                            {
                              "kind": "scalar",
                              "value": "high"
                            }
                          ]
                        },
                        {
                          "field": "description",
                          "values": [
                            {
                              "kind": "scalar",
                              "value": "Page numbering is monotonic across versions"
                            }
                          ]
                        }
                      ],
                      "kind": "inline_record"
                    }
                  }
                ],
                "value": {
                  "fields": [
                    {
                      "field": "confidence",
                      "values": [
                        {
                          "kind": "scalar",
                          "value": "high"
                        }
                      ]
                    },
                    {
                      "field": "description",
                      "values": [
                        {
                          "kind": "scalar",
                          "value": "Page numbering is monotonic across versions"
                        }
                      ]
                    }
                  ],
                  "kind": "inline_record"
                }
              }
            ],
            "field": "assumptions"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 58,
                        "line_col": {
                          "end": {
                            "col": 40,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 32
                      },
                      "file": "<root>/scenarios/marked-fence-clean/decision.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Migrate dev DB to SQLite"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Migrate dev DB to SQLite"
                }
              }
            ],
            "field": "description"
          }
        ],
        "file": "<root>/scenarios/marked-fence-clean/decision.md",
        "section_presence": null
      }
    ]
  }
}
